--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "resolutions": {
+    "devcert": "1.1.0"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@types/react-helmet": "^6.0.0",
@@ -11,8 +14,10 @@
     "add": "^2.0.6",
     "axios": "^0.19.2",
     "babel-plugin-styled-components": "^1.10.7",
+    "devcert": "^1.1.2",
     "gatsby": "^2.23.12",
     "gatsby-image": "^2.4.9",
+    "gatsby-plugin-guess-js": "^1.3.11",
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-react-helmet": "^3.3.6",
